[package]
name = "space"
edition = "2024"
description="Open multiple apps at the same time with a simple command."
readme="README.md"
homepage="https://github.com/calejvaldez/space"
repository="https://github.com/calejvaldez/space.git"
license = "GPL-3.0"
include = ["LICENSE"]
publish = false

[dependencies]
clap = { version = "4.5.40", features = ["derive"] }
dirs = "6.0.0"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8.23"
rfd = "0.15"
open = "5.3.2"
